# cdv_concurrent_programming

./: .gitignore  README.md  send_file.py
lab1/: fork_test.c
lab2/: lab2_001.c  lab2_002.c  lab2_003.c
lab3/: lab3_001.c  lab3_002.c  lab3_003.c
lab4/: main.go
lab5/: go.mod  main.go
problemy_synch/: CMakeLists.txt  barrier.c  barrier.h  santa_claus_mutex.c  synteza_wody_sem.c
zaliczenie/: synteza_wody_sem.c
